--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,22 +48,24 @@ dependencies:
   flutter_sound_lite: 8.5.0
 
   # file permissions
-  permission_handler: 9.0.2  #5.1.0+2  #8.1.2
+  permission_handler: #9.0.2  #5.1.0+2  #8.1.2
   flutter_launcher_icons: 0.9.1
-  firebase_messaging: 11.0.0
+
+  firebase_core:
+  firebase_messaging_web:
+  firebase_messaging_platform_interface:
+  firebase_core_platform_interface:
+  firebase_messaging:
 
 
- # flutter_webview_plugin: ^0.3.11
+  # flutter_webview_plugin: ^0.3.11
   rename:
   email_validator:
 
 
 
 dependency_overrides:
-  firebase_core: 1.10.0
-  firebase_messaging_web: 2.2.1
-  firebase_messaging_platform_interface: ^3.1.0
-  firebase_core_platform_interface: 4.5.1
+# firebase_messaging: 11.4.0
 
 dev_dependencies:
   flutter_test:
