--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
  # firebase_messaging: ^7.0.3
   http: ^0.13.2
   rxdart: 0.27.0
+  percent_indicator: ^4.2.2
   shared_preferences: 2.0.7
   intl: ^0.17.0
   cached_network_image: 3.1.0
